@@ -5,7 +5,10 @@ HISTORY
 1.2.10 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Initialize TinyMCE with "media_strict: false" to allow embed tags if
+  they are removed from the list of nasty tags.
+  Fixeѕ https://dev.plone.org/ticket/10681
+  [rochecompaan]
 
 
 1.2.9 (2011-11-24)
